[package]
name = "Maple"
version = "0.1.0"
authors = ["Shardul Vaidya <cam.v737@gmail.com>"]
edition = "2018"

[lib]
name = "maple_lib"
path = "lib/maple.rs"

[[bin]]
name = "maple_repl"
path = "repl/main.rs"

[[bin]]
name = "maple_exe"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
